// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms/ErrorAlert Default 1`] = `null`;

exports[`Storyshots atoms/ErrorAlert Error 1`] = `
<div
  className="chakra-alert css-1pshjjd"
  role="alert"
>
  <span
    className="chakra-alert__icon css-r8g2n"
  >
    <svg
      className="chakra-icon css-fi0ww0"
      focusable={false}
      viewBox="0 0 24 24"
    >
      <path
        d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
        fill="currentColor"
      />
    </svg>
  </span>
  <div
    className="chakra-alert__desc css-12db8z9"
  >
    this is error message.
  </div>
  <button
    aria-label="Close"
    className="css-1um9mvy"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="chakra-icon css-onkibi"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots atoms/ProgressBar Default 1`] = `null`;

exports[`Storyshots atoms/ProgressBar Loading 1`] = `
<div
  className="css-29kqvd"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    className="css-1j7orzg"
    data-indeterminate=""
    role="progressbar"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`Storyshots molecules/UserItem Normal User 1`] = `
<div
  className="css-r72fs0"
>
  <span
    className="chakra-avatar css-wb0gq6"
  >
    <svg
      className="css-16ite8i"
      role="img"
      viewBox="0 0 128 128"
    >
      <path
        d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
        fill="currentColor"
      />
      <path
        d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
        fill="currentColor"
      />
    </svg>
  </span>
  <p
    className="chakra-text css-edbwtx"
  >
    normal
  </p>
</div>
`;

exports[`Storyshots molecules/UserItem Room Master 1`] = `
<div
  className="css-r72fs0"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
>
  <span
    className="chakra-avatar css-1bzdz9k"
  >
    <svg
      className="css-16ite8i"
      role="img"
      viewBox="0 0 128 128"
    >
      <path
        d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
        fill="currentColor"
      />
      <path
        d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
        fill="currentColor"
      />
    </svg>
  </span>
  <p
    className="chakra-text css-edbwtx"
  >
    room-master
  </p>
</div>
`;

exports[`Storyshots molecules/UserItem Your User 1`] = `
<div
  className="css-r72fs0"
>
  <span
    className="chakra-avatar css-wb0gq6"
  >
    <svg
      className="css-16ite8i"
      role="img"
      viewBox="0 0 128 128"
    >
      <path
        d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
        fill="currentColor"
      />
      <path
        d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
        fill="currentColor"
      />
    </svg>
  </span>
  <p
    className="chakra-text css-edbwtx"
  >
    your-user
  </p>
  <p
    className="chakra-text css-0"
  >
    (You)
  </p>
</div>
`;

exports[`Storyshots organisms/Header Default 1`] = `
<nav
  className="css-wpuqz4"
>
  <div
    className="css-15kq0nh"
  >
    <h1
      className="chakra-heading css-jbb5c7"
    >
      Chambre
    </h1>
  </div>
  <div
    className="css-259i0c"
    onClick={[Function]}
  >
    <svg
      fill="white"
      viewBox="0 0 20 20"
      width="12px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Menu
      </title>
      <path
        d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"
      />
    </svg>
  </div>
  <div
    className="css-80xu6x"
  >
    <div
      className="css-lj4mtz"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </div>
    <div
      className="css-lj4mtz"
    >
      <a
        href="/create"
        onClick={[Function]}
      >
        Create Room
      </a>
    </div>
  </div>
</nav>
`;

exports[`Storyshots organisms/Header Error 1`] = `
Array [
  <nav
    className="css-wpuqz4"
  >
    <div
      className="css-15kq0nh"
    >
      <h1
        className="chakra-heading css-jbb5c7"
      >
        Chambre
      </h1>
    </div>
    <div
      className="css-259i0c"
      onClick={[Function]}
    >
      <svg
        fill="white"
        viewBox="0 0 20 20"
        width="12px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Menu
        </title>
        <path
          d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"
        />
      </svg>
    </div>
    <div
      className="css-80xu6x"
    >
      <div
        className="css-lj4mtz"
      >
        <a
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </div>
      <div
        className="css-lj4mtz"
      >
        <a
          href="/create"
          onClick={[Function]}
        >
          Create Room
        </a>
      </div>
    </div>
  </nav>,
  <div
    className="chakra-alert css-1pshjjd"
    role="alert"
  >
    <span
      className="chakra-alert__icon css-r8g2n"
    >
      <svg
        className="chakra-icon css-fi0ww0"
        focusable={false}
        viewBox="0 0 24 24"
      >
        <path
          d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      className="chakra-alert__desc css-12db8z9"
    >
      error message
    </div>
    <button
      aria-label="Close"
      className="css-1um9mvy"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-onkibi"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>,
]
`;

exports[`Storyshots organisms/Header Loading 1`] = `
Array [
  <nav
    className="css-wpuqz4"
  >
    <div
      className="css-15kq0nh"
    >
      <h1
        className="chakra-heading css-jbb5c7"
      >
        Chambre
      </h1>
    </div>
    <div
      className="css-259i0c"
      onClick={[Function]}
    >
      <svg
        fill="white"
        viewBox="0 0 20 20"
        width="12px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Menu
        </title>
        <path
          d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"
        />
      </svg>
    </div>
    <div
      className="css-80xu6x"
    >
      <div
        className="css-lj4mtz"
      >
        <a
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </div>
      <div
        className="css-lj4mtz"
      >
        <a
          href="/create"
          onClick={[Function]}
        >
          Create Room
        </a>
      </div>
    </div>
  </nav>,
  <div
    className="css-29kqvd"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      className="css-1j7orzg"
      data-indeterminate=""
      role="progressbar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>,
]
`;

exports[`Storyshots organisms/UserList Blank List 1`] = `
<div
  className="css-p58oka"
/>
`;

exports[`Storyshots organisms/UserList Default 1`] = `
<div
  className="css-p58oka"
>
  <div
    className="css-r72fs0"
  >
    <span
      className="chakra-avatar css-wb0gq6"
    >
      <svg
        className="css-16ite8i"
        role="img"
        viewBox="0 0 128 128"
      >
        <path
          d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
          fill="currentColor"
        />
        <path
          d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
          fill="currentColor"
        />
      </svg>
    </span>
    <p
      className="chakra-text css-edbwtx"
    >
      normal
    </p>
  </div>
  <div
    className="css-r72fs0"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
  >
    <span
      className="chakra-avatar css-1bzdz9k"
    >
      <svg
        className="css-16ite8i"
        role="img"
        viewBox="0 0 128 128"
      >
        <path
          d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
          fill="currentColor"
        />
        <path
          d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
          fill="currentColor"
        />
      </svg>
    </span>
    <p
      className="chakra-text css-edbwtx"
    >
      room-master
    </p>
  </div>
  <div
    className="css-r72fs0"
  >
    <span
      className="chakra-avatar css-wb0gq6"
    >
      <svg
        className="css-16ite8i"
        role="img"
        viewBox="0 0 128 128"
      >
        <path
          d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
          fill="currentColor"
        />
        <path
          d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
          fill="currentColor"
        />
      </svg>
    </span>
    <p
      className="chakra-text css-edbwtx"
    >
      your-user
    </p>
    <p
      className="chakra-text css-0"
    >
      (You)
    </p>
  </div>
</div>
`;

exports[`Storyshots templates/PageFrame Default 1`] = `
Array [
  <nav
    className="css-wpuqz4"
  >
    <div
      className="css-15kq0nh"
    >
      <h1
        className="chakra-heading css-jbb5c7"
      >
        Chambre
      </h1>
    </div>
    <div
      className="css-259i0c"
      onClick={[Function]}
    >
      <svg
        fill="white"
        viewBox="0 0 20 20"
        width="12px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Menu
        </title>
        <path
          d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"
        />
      </svg>
    </div>
    <div
      className="css-80xu6x"
    >
      <div
        className="css-lj4mtz"
      >
        <a
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </div>
      <div
        className="css-lj4mtz"
      >
        <a
          href="/create"
          onClick={[Function]}
        >
          Create Room
        </a>
      </div>
    </div>
  </nav>,
  <div
    className="chakra-container css-559y52"
  >
    child components
  </div>,
]
`;
